Selector layout (no terminado)

--- a/src/templates/app/booklet/form.phtml
+++ b/src/templates/app/booklet/form.phtml
@@ -21,121 +21,151 @@
         <input type="hidden" name="id" value="<?php echo $data['id'] ?>" />
     <?php endif; ?>
 
-    <div class="card card-custom card-sticky">
-        <div class="card-header">
-            <div class="card-title">
-                <h2><?php echo __('app.common.main_information') ?></h2>
-            </div>
+    <div class="stepper stepper-pills first" id="mt-booklet-stepper">
+        <div class="stepper-nav flex-start flex-wrap mb-10">
+            <?php foreach (['info', 'page_2', 'page_3', 'page_4', 'generate_pdf'] as $i => $step): ?>
+                <div class="stepper-item mx-8 my-4<?php if ($i == 0): ?> current<?php endif; ?>" data-kt-stepper-element="nav" data-kt-stepper-action="step">
+                    <div class="stepper-wrapper d-flex align-items-center">
+                        <div class="stepper-icon w-40px h-40px">
+                            <i class="stepper-check fas fa-check"></i>
+                            <span class="stepper-number"><?php echo $i + 1 ?></span>
+                        </div>
+                        <div class="stepper-label">
+                            <h3 class="stepper-title">
+                                <?php echo __('app.booklet.step_' . $step) ?>
+                            </h3>
+                        </div>
+                    </div>
+                    <div class="stepper-line h-40px"></div>
+                </div>
+            <?php endforeach; ?>
         </div>
-        <div class="card-body">
-            <div class="row">
-                <div class="col-md-6">
-                    <label class="col-form-label required"><?php echo __('app.common.name') ?></label>
-                    <div>
-                        <input type="text" class="form-control" required placeholder="<?php echo __('app.common.name') ?>" name="name" maxlength="100" />
-                    </div>
-                </div>
 
-                <?php if ($_SESSION['user']['user_profile_id'] == App\Constant\UserProfile::Administrator) : ?>
-                    <div class="col-md-6">
-                        <label class="col-form-label required"><?php echo __('app.entity.market') ?></label>
-                        <div>
-                            <select name="market_id" data-control="select2" data-placeholder="<?php echo __('app.common.select_value') ?>" class="form-select kt-select2" required>
-                                <option disabled selected value> <?php echo __('app.common.select_value') ?> </option>
-                                <?php foreach ($data['markets'] as $market): ?>
-                                    <option value="<?php echo $market['id'] ?>">
-                                        <?php echo $market['name'] ?>
-                                    </option>
-                                <?php endforeach; ?>
-                            </select>
+        <div>
+            <div class="current flex-column" data-kt-stepper-element="content">
+                <div class="card card-custom card-sticky">
+                    <div class="card-header">
+                        <div class="card-title">
+                            <h2><?php echo __('app.common.main_information') ?></h2>
                         </div>
                     </div>
-                <?php else: ?>
-                    <div class="col-md-6">
-                        <label class="col-form-label"><?php echo __('app.entity.market') ?></label>
-                        <div>
-                            <input type="text" class="form-control" disabled name="market_name" />
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col md-6">
+                                <label class="col-form-label required"><?php echo __('app.common.name') ?></label>
+                                <div>
+                                    <input type="text" class="form-control" required placeholder="<?php echo __('app.common.name') ?>" name="name" maxlength="100" />
+                                </div>
+                            </div>
+
+                            <?php if ($_SESSION['user']['user_profile_id'] == App\Constant\UserProfile::Administrator) : ?>
+                                <div class="col-md-6">
+                                    <label class="col-form-label required"><?php echo __('app.entity.market') ?></label>
+                                    <div>
+                                        <select name="market_id" data-control="select2" data-placeholder="<?php echo __('app.common.select_value') ?>" class="form-select kt-select2" required>
+                                            <option disabled selected value> <?php echo __('app.common.select_value') ?> </option>
+                                            <?php foreach ($data['markets'] as $market): ?>
+                                                <option value="<?php echo $market['id'] ?>">
+                                                    <?php echo $market['name'] ?>
+                                                </option>
+                                            <?php endforeach; ?>
+                                        </select>
+                                    </div>
+                                </div>
+                            <?php else: ?>
+                                <div class="col-md-6">
+                                    <label class="col-form-label"><?php echo __('app.entity.market') ?></label>
+                                    <div>
+                                        <input type="text" class="form-control" disabled name="market_name" />
+                                    </div>
+                                </div>
+                            <?php endif ?>
+
+                            <div class="col-md-6">
+                                <label class="col-form-label required"><?php echo __('app.visuals_language') ?></label>
+                                <div>
+                                    <select name="main_language_id" data-control="select2" data-placeholder="<?php echo __('app.common.select_value') ?>" class="form-select kt-select2" required>
+                                        <option disabled selected value> <?php echo __('app.common.select_value') ?> </option>
+                                        <?php foreach ($data['languages'] as $lang): ?>
+                                            <option value="<?php echo $lang['id'] ?>"
+                                                <?php echo (!empty($data['default_main_language']) && $lang['id'] == $data['default_main_language']) ? 'selected' : '' ?>>
+                                                <?php echo $lang['name'] ?>
+                                            </option>
+                                        <?php endforeach; ?>
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <label class="col-form-label required"><?php echo __('app.qr_language') ?></label>
+                                <div>
+                                    <select name="qr_language_id" data-control="select2" data-placeholder="<?php echo __('app.common.select_value') ?>" class="form-select kt-select2" required>
+                                        <option disabled selected value> <?php echo __('app.common.select_value') ?> </option>
+                                        <?php foreach ($data['languages'] as $lang): ?>
+                                            <option value="<?php echo $lang['id'] ?>">
+                                                <?php echo $lang['name'] ?>
+                                            </option>
+                                        <?php endforeach; ?>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                <?php endif ?>
-
-                <div class="col-md-6">
-                    <label class="col-form-label required"><?php echo __('app.visuals_language') ?></label>
-                    <div>
-                        <select name="main_language_id" data-control="select2" data-placeholder="<?php echo __('app.common.select_value') ?>" class="form-select kt-select2" required>
-                            <option disabled selected value> <?php echo __('app.common.select_value') ?> </option>
-                            <?php foreach ($data['languages'] as $lang): ?>
-                                <option value="<?php echo $lang['id'] ?>"
-                                    <?php echo (!empty($data['default_main_language']) && $lang['id'] == $data['default_main_language']) ? 'selected' : '' ?>>
-                                    <?php echo $lang['name'] ?>
-                                </option>
-                            <?php endforeach; ?>
-                        </select>
-                    </div>
                 </div>
 
-                <div class="col-md-6">
-                    <label class="col-form-label required"><?php echo __('app.qr_language') ?></label>
-                    <div>
-                        <select name="qr_language_id" data-control="select2" data-placeholder="<?php echo __('app.common.select_value') ?>" class="form-select kt-select2" required>
-                            <option disabled selected value> <?php echo __('app.common.select_value') ?> </option>
-                            <?php foreach ($data['languages'] as $lang): ?>
-                                <option value="<?php echo $lang['id'] ?>">
-                                    <?php echo $lang['name'] ?>
-                                </option>
-                            <?php endforeach; ?>
-                        </select>
+                <?php if (!empty($data['id'])): ?>
+                    <div class="card card-custom card-sticky">
+                        <div class="card-header">
+                            <div class="card-title">
+                                <h3><?php echo __('app.common.additional_info') ?></h3>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <div class="row profile-allow profile-A">
+
+                                <div class="col-md-6">
+                                    <label class="col-form-label"><?php echo __('app.creator') ?></label>
+                                    <div>
+                                        <input type="text" class="form-control" disabled name="creator_name" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <label class="col-form-label"><?php echo __('app.common.date_created') ?></label>
+                                    <div>
+                                        <input class="form-control mt-date-created" disabled type="text">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <label class="col-form-label"><?php echo __('app.common.date_updated') ?></label>
+                                    <div>
+                                        <input class="form-control mt-date-updated" disabled type="text">
+                                    </div>
+                                </div>
+                                <?php if (!empty($fields)) : ?>
+                                    <?php foreach ($fields as $fieldName => $fieldLabel) : ?>
+                                        <div class="col-md-6">
+                                            <label class="col-form-label"><?php echo $fieldLabel ?></label>
+                                            <div>
+                                                <input class="form-control <?php echo $fieldName ?>" disabled type="text">
+                                            </div>
+                                        </div>
+                                    <?php endforeach; ?>
+                                <?php endif; ?>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                <?php endif; ?>
+            </div>
+
+            <?php $this->insert("booklet/inc/page", ['pageNum' => 2, 'layouts' => $data['layouts']]) ?>
+            <?php $this->insert("booklet/inc/page", ['pageNum' => 3, 'layouts' => $data['layouts']]) ?>
+            <?php $this->insert("booklet/inc/page", ['pageNum' => 4, 'layouts' => $data['layouts']]) ?>
+
+            <div data-kt-stepper-element="content">
+                PDF
             </div>
         </div>
     </div>
-
-
-
-    <?php if (!empty($data['id'])): ?>
-        <div class="card card-custom card-sticky">
-            <div class="card-header">
-                <div class="card-title">
-                    <h3><?php echo __('app.common.additional_info') ?></h3>
-                </div>
-            </div>
-            <div class="card-body">
-                <div class="row profile-allow profile-A">
-
-                    <div class="col-md-6">
-                        <label class="col-form-label"><?php echo __('app.creator') ?></label>
-                        <div>
-                            <input type="text" class="form-control" disabled name="creator_name" />
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <label class="col-form-label"><?php echo __('app.common.date_created') ?></label>
-                        <div>
-                            <input class="form-control mt-date-created" disabled type="text">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <label class="col-form-label"><?php echo __('app.common.date_updated') ?></label>
-                        <div>
-                            <input class="form-control mt-date-updated" disabled type="text">
-                        </div>
-                    </div>
-                    <?php if (!empty($fields)) : ?>
-                        <?php foreach ($fields as $fieldName => $fieldLabel) : ?>
-                            <div class="col-md-6">
-                                <label class="col-form-label"><?php echo $fieldLabel ?></label>
-                                <div>
-                                    <input class="form-control <?php echo $fieldName ?>" disabled type="text">
-                                </div>
-                            </div>
-                        <?php endforeach; ?>
-                    <?php endif; ?>
-                </div>
-            </div>
-        </div>
-
-    <?php endif; ?>
 </form>
