--- a/public/app/css/project/custom.css
+++ b/public/app/css/project/custom.css
@@ -50,3 +50,14 @@ body.profile-B .profile-deny.profile-B {
 }
 
 
+.booklet-table-container table {
+    width: 100%;
+    height: 800px;
+    table-layout: fixed;
+}
+
+.booklet-table-container td {
+    border: 1px solid #ccc;
+    text-align: center;
+    vertical-align: top !important;
+}
