--- a/public/app/css/project/custom.css
+++ b/public/app/css/project/custom.css
@@ -45,15 +45,23 @@ body.profile-B .profile-deny.profile-B {
     color: var(--bs-primary-light);
 }
 
+.form-check-input:checked {
+    background-color: var(--bs-primary-active);
+}
+
 .btn:hover{
     opacity: 0.8 !important;
 }
-
 
 .booklet-table-container table {
     width: 100%;
     height: 800px;
     table-layout: fixed;
+}
+
+.booklet-table-container table tr,
+.booklet-table-container table td {
+    border-color: #f4f4f4 !important;
 }
 
 .booklet-table-container td {
@@ -63,4 +71,127 @@ body.profile-B .profile-deny.profile-B {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.file-info-container{
+    min-height: 120px;
+}
+
+.file-info-container .btn-delete-file{
+    position: absolute;
+    top: 12px;
+    right: 24px;
+}
+
+.file-info-container .btn-delete-file i {
+    font-size: 20px;
+}
+
+.file-info-container .file-container{
+    position: relative;
+}
+
+.file-info-container .file-info{
+    background-color: #f6f6f6;
+    border-radius: 6px;
+    color: inherit !important;
+}
+
+form.data-form .card .card-body.file-info-container .file-info .row > *{
+    margin-bottom: 0 !important;
+}
+
+.file-info-container .file-info i{
+    font-size: 50px;
+}
+
+.stepper.stepper-pills{
+    --bs-stepper-icon-bg-color:var(--bs-primary-active);
+    --bs-stepper-icon-bg-color-current:var(--bs-primary);
+    --bs-stepper-icon-bg-color-completed:var(--bs-primary-active);
+    --bs-stepper-icon-number-color:var(--bs-white);
+    --bs-stepper-icon-number-color-current:var(--bs-white);
+    --bs-stepper-label-title-color:var(--bs-gray-600);
+    --bs-stepper-label-title-color-current:var(--bs-gray-800);
+    --bs-stepper-label-title-color-completed:var(--bs-gray-600);
+}
+
+.stepper.stepper-pills .stepper-item.completed .stepper-icon .stepper-number {
+    display: block;
+}
+
+.stepper.stepper-pills .stepper-item{
+    flex: 1;
+}
+
+@media (max-width: 1199px) {
+    .stepper.stepper-pills .stepper-item .stepper-label .stepper-title {
+        font-size: 1.1rem;
+    }
+
+    .stepper.stepper-pills .stepper-item .stepper-icon .stepper-number {
+        font-size: 1.15rem;
+    }
+
+    .stepper.stepper-pills .stepper-item .stepper-icon {
+        margin-right: 0.9rem;
+    }
+}
+
+@media (max-width: 830px) {
+    .stepper.stepper-pills .stepper-item {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+        flex: 0 0 50%;
+        width: 50%;
+    }
+}
+
+@media (max-width: 520px) {
+    .stepper.stepper-pills .stepper-item {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+        width: 100%;
+    }
+}
+
+.custom-svg-icon.icon-booklet{
+    width: 24px;
+    height: 24px;
+}
+
+.custom-svg-icon.icon-prescription{
+    width: 22px;
+    height: 22px;
+}
+
+.custom-svg-icon.icon-product{
+    width: 32px;
+    height: 32px;
+}
+
+.app-sidebar-nav .custom-svg-icon path,
+.app-sidebar-nav .custom-svg-icon polygon{
+    fill: var(--bs-text-gray-600);
+}
+
+.app-sidebar-nav .nav-link.active .custom-svg-icon path,
+.app-sidebar-nav .nav-link:hover .custom-svg-icon path,
+.app-sidebar-nav .nav-link.active .custom-svg-icon polygon,
+.app-sidebar-nav .nav-link:hover .custom-svg-icon polygon{
+    fill: var(--bs-primary);
+}
+
+.menu-state-dark .menu-item .menu-link.active .menu-icon, 
+.menu-state-dark .menu-item .menu-link.active .menu-icon .svg-icon, 
+.menu-state-dark .menu-item .menu-link.active .menu-icon i,
+.menu-state-dark .menu-item.here>.menu-link .menu-icon, 
+.menu-state-dark .menu-item.here>.menu-link .menu-icon .svg-icon, 
+.menu-state-dark .menu-item.here>.menu-link .menu-icon i,
+.menu-state-dark .menu-item:not(.here) .menu-link:hover:not(.disabled):not(.active):not(.here) .menu-icon i,
+.menu-state-dark .menu-item.show>.menu-link .menu-icon, 
+.menu-state-dark .menu-item.show>.menu-link .menu-icon .svg-icon, 
+.menu-state-dark .menu-item.show>.menu-link .menu-icon i {
+    color: var(--bs-primary);
 }
