--- a/src/templates/app/main.phtml
+++ b/src/templates/app/main.phtml
@@ -18,7 +18,7 @@
                         </div>
                         <!--end::Mobile toggle-->
                         <!--begin::Logo image-->
-                        <a href="#">
+                        <a href="/">
                             <img alt="Logo asc" src="/app/img/logo.png" class=" ms-lg-n3 me-lg-2 w-80px" />
                         </a>
                         <!--end::Logo image-->
