--- a/src/templates/app/inc/header/sidebar.phtml
+++ b/src/templates/app/inc/header/sidebar.phtml
@@ -25,7 +25,7 @@
                     <!--begin::Navbar link-->
                     <a href="javascript:;" class="nav-link py-4 px-1 btn <?php //App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuBooklet, 'active'); ?>">
                         <?php $this->insert("inc/common/icon/prescription") ?>
-                        <span class="pt-2 fs-9 fs-lg-7 fw-bold"><?php echo __('app.entity.plural.prescription') ?></span>
+                        <span class="pt-2 fs-9 fs-lg-7 fw-bold"><?php echo __('app.entity.plural.recipe') ?></span>
                     </a>
                     <!--end::Navbar link-->
                 </li>
